add main nav header

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Library</title>
     <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
 </head>
 <body>
-    
+    <h1>JavaScript Library</h1>
+    <a href="#" id="book-form">Add A New Book</a>
+    <a href="# id="books-home">Books</a>
+    <hr>
+    <br>
+    <div id="book-form"></div>
+    <div id="main">
+        <ul>
+
+        </ul>
+    </div>
 </body>
 </html>
