add listener to books home link

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>JavaScript Library</h1>
     <a href="#" id="book-form">Add A New Book</a>
-    <a href="# id="books-home">Books</a>
+    <a href="#"" id="books-home">Books</a>
     <hr>
     <br>
     <div id="book-form"></div>
