add new book form

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>JavaScript Library</h1>
-    <a href="#" id="book-form">Add A New Book</a>
+    <a href="#" id="books-form">Add A New Book</a>
     <a href="#"" id="books-home">Books</a>
     <hr>
     <br>
-    <div id="book-form"></div>
+    <div id="new-book-form"></div>
     <div id="main">
         <ul>
 
