add additional sources

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Library</title>
-    <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
+    <script type="application/javascript" src="src/index.js" 
+    charset="UTF-8"></script>
+    <script type="application/javascript" src="components/Author.js" 
+    charset="UTF-8"></script>
+    <script type="application/javascript" src="components/Book.js" 
+    charset="UTF-8"></script>
+    <script type="application/javascript" src="services/ApiService.js" 
+    charset="UTF-8"></script>
 </head>
 <body>
     <h1>JavaScript Library</h1>
