update src routing

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -6,11 +6,11 @@
     <title>JavaScript Library</title>
     <script type="application/javascript" src="src/index.js" 
     charset="UTF-8"></script>
-    <script type="application/javascript" src="components/Author.js" 
+    <script type="application/javascript" src="src/components/Author.js" 
     charset="UTF-8"></script>
-    <script type="application/javascript" src="components/Book.js" 
+    <script type="application/javascript" src="src/components/Book.js" 
     charset="UTF-8"></script>
-    <script type="application/javascript" src="services/ApiService.js" 
+    <script type="application/javascript" src="src/services/ApiService.js" 
     charset="UTF-8"></script>
 </head>
 <body>
