add link to books by J.K. Rowling

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -10,6 +10,7 @@
     <h1>JavaScript Library</h1>
     <a href="#" id="books-form">Add A New Book</a>
     <a href="#"" id="books-home">Books</a>
+    <a href="#" id="jk_books">J.K. Rowling's Books</a>
     <hr>
     <br>
     <div id="new-book-form"></div>
