create css file & link index page to css file

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Library</title>
+    <link rel="stylesheet" href="./src/css/index.css">
 
 </head>
 <body>
     <h1>JavaScript Library</h1>
     <a href="#" id="books-form">Add A New Book</a>
+     | 
     <a href="#"" id="books-home">Books</a>
+     |
     <a href="#" id="authors-home">Authors</a>
     <hr>
     <br>
