add css styling

--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -8,19 +8,21 @@
 
 </head>
 <body>
-    <h1>JavaScript Library</h1>
-    <a href="#" id="books-form">Add A New Book</a>
-     | 
-    <a href="#"" id="books-home">Books</a>
-     |
-    <a href="#" id="authors-home">Authors</a>
-    <hr>
-    <br>
-    <div id="new-book-form"></div>
-    <div id="main">
-        <ul>
+    <div id="body">
+        <h1>JavaScript Library</h1>
+        <a href="#" id="books-form">Add A New Book</a>
+        | 
+        <a href="#"" id="books-home">Books</a>
+        |
+        <a href="#" id="authors-home">Authors</a>
+        <hr>
+        <br>
+        <div id="new-book-form"></div>
+        <div id="main">
+            <ul>
 
-        </ul>
+            </ul>
+        </div>
     </div>
 
         
