--- a/js_proj_frontend/index.html
+++ b/js_proj_frontend/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <div id="body">
-        <h1>JavaScript Library</h1>
+        <h1 id="title">JavaScript Library</h1>
         <a href="#" id="books-form">Add A New Book</a>
         | 
         <a href="#"" id="books-home">Books</a>
         |
         <a href="#" id="authors-home">Authors</a>
         <hr>
-        <br>
         <div id="new-book-form"></div>
         <div id="main">
             <ul>
